<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gabilheri.rosbridgecontroller.app.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <ImageView
        android:src="@drawable/android"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:contentDescription="@string/android_logo"
    />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_action_person"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
    />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_secure"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
    />

    <Button
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="signInRegister"
        android:background="@drawable/orange_button"
        android:textColor="@android:color/white"
    />

    <Button
        android:id="@+id/continueWithoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_login"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="continueWithoutLogin"
        android:background="@drawable/orange_button"
        android:textColor="@android:color/white"
    />

    <Button
        android:id="@+id/forgotUsernamePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_username_password"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textStyle="italic"
        android:onClick="forgotUsernamePassword"
    />

</LinearLayout>
