<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gabilheri.rosbridgecontroller.app.ForgotPasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title"
            android:background="@color/orange_color"
            android:text="@string/reset_pass"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <Button
            android:id="@+id/getQuestions"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:onClick="getAnswers"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@drawable/orange_button"
            />
        <LinearLayout
            android:id="@+id/getElements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >
            <TextView
                android:id="@+id/securityQuestion1"
                android:text="@string/sec1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/securityAnswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/answer1"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dip"
                android:padding="10dip"
                />
            <TextView
                android:id="@+id/securityQuestion2"
                android:text="@string/sec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <EditText
                android:id="@+id/securityAnswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/answer2"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dip"
                android:padding="10dip"
                />
            <Button
                android:id="@+id/answerQuestions"
                android:text="@string/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="answerQuestions"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/orange_button"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/getPasswordStuff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            >

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_pass"
                android:inputType="textPassword"
                android:layout_marginTop="10dip"
                android:padding="10dip"
                />
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                android:layout_marginTop="10dip"
                android:padding="10dip"
                />
            <Button
                android:id="@+id/resetPassword"
                android:text="@string/set_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="resetPassword"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/orange_button"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>