<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gabilheri.rosbridgecontroller.app.AddRobot"
    android:orientation="vertical"
    >
    <TextView
        android:background="@color/orange_color"
        android:text="@string/new_robot"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="5sp"
        android:paddingTop="5sp"
        />

    <EditText
        android:id="@+id/robotName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/robot_name"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />
    <RadioGroup
        android:id="@+id/ipUrlGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
        <RadioButton
            android:id="@+id/ipAddress"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingLeft="10dip"
            android:text="@string/ipAddress"
            android:checked="true"
            android:onClick="changeLayouts"
        />
        <RadioButton
            android:id="@+id/urlAddress"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingLeft="10dip"
            android:text="@string/url_address"
            android:onClick="changeLayouts"
        />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layoutIpAddress"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <EditText
            android:id="@+id/ipBox1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/_255"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/ipBox2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/_255"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/ipBox3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/_255"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/ipBox4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/_255"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="number"
            android:hint="@string/port"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutUrlAddress"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >
        <EditText
            android:id="@+id/urlAddressField"
            android:layout_weight="0.8"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:hint="URL (No Http:// needed)"
        />
        <EditText
            android:id="@+id/port2"
            android:layout_weight="0.2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:hint="@string/port"
            android:inputType="number"
        />

    </LinearLayout>
    <TextView
        android:id="@+id/velocityText"
        android:text="@string/speed_settings"
        android:textColor="@color/orange_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="2dip"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/black"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:id="@+id/velocitySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum=".99"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" >
        <EditText
            android:id="@+id/velDefault"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:hint="@string/default_vel"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/velMax"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:hint="@string/max"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/angularText"
        android:text="@string/angular_settings"
        android:textColor="@color/orange_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="2dip"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/black"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <LinearLayout
        android:id="@+id/angularSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum=".99"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin" >
        <EditText
            android:id="@+id/angDefault"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:hint="@string/default_vel"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/angMax"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:hint="@string/max"
            android:gravity="center_horizontal"
            />

    </LinearLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/orange_button"
        android:onClick="createRobot"
        />
</LinearLayout>
