<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.gabilheri.rosbridgecontroller.app.RegisterActivity"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/title"
            android:background="@color/orange_color"
            android:text="Register"
            android:textSize="35sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
        <TextView
            android:id="@+id/personalInfo"
            android:text="User Information"
            android:textColor="@color/orange_color_pressed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />
        <View
            android:id="@+id/lineSpacer1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
            android:inputType="textEmailAddress"
            >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
        />
        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
         />

        <TextView
            android:id="@+id/securityQuestions"
            android:text="Security Questions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_color_pressed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
        <View
            android:id="@+id/lineSpacer2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@android:color/black"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_below="@id/securityQuestions"
        />

        <Spinner
            android:id="@+id/question1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/lineSpacer2"
            android:entries="@array/security_questions"
        />

        <EditText
            android:id="@+id/securityQuestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Answer Security Question 1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
        />

        <Spinner
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/securityQuestion1"
            android:entries="@array/security_questions"
            />
        <EditText
            android:id="@+id/securityQuestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Answer Security Question 2"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
           />

        <Spinner
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/securityQuestion2"
            android:entries="@array/security_questions"
            />
        <EditText
            android:id="@+id/securityQuestion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Answer Security Question 3"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:padding="10dip"
          />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/orange_button"
            android:onClick="createUser"
            android:textColor="@android:color/white"
        />
    </LinearLayout>
</ScrollView>